--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,21 @@ authors = ["Nat Hillard <Nathaniel.K.Hillard@omb.eop.gov>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+fastapi = {extras = ["all"], version = "^0.61.1"}
+joblib = "^0.17.0"
+sklearn = "^0.0"
+scikit-learn = "^0.21"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+flake8 = "^3.8.4"
+mypy = "^0.790"
+black = "^20.8b1"
+autopep8 = "^1.5.4"
+
+[tool.poetry.scripts]
+test = 'scripts:test'
+server = 'scripts:server'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
