--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -5,6 +5,7 @@ FROM vasdvp/health-apis-centos:8
 ADD shared/install-git-centos8 /install-git
 ADD shared/install-docker-centos8 /install-docker
 ADD shared/install-awscli /install-awscli
+ADD shared/retry /usr/local/bin/retry
 
 #
 # Install Git, awscli and Docker
@@ -12,3 +13,6 @@ ADD shared/install-awscli /install-awscli
 RUN /install-git
 RUN /install-awscli
 RUN /install-docker
+
+# Install Git-lfs
+RUN retry yum install -y -q git-lfs && git lfs install
