--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.7"
 fastapi = {extras = ["all"], version = "^0.61.1"}
 joblib = "^0.17.0"
 scikit-learn = "^0.23.2"
+scipy = "^1.5.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
