--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "name": "Python: Module",
             "type": "python",
             "request": "launch",
             "module": "uvicorn",
             "args": [
-                "attributes_fastapi.classification:app",
+                "claims_attributes.main:app",
                 "--reload"
             ]
         }
