--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ flake8 = "^3.8.4"
 mypy = "^0.790"
 black = "^20.8b1"
 autopep8 = "^1.5.4"
+certifi = "^2020.11.8"
 
 [tool.poetry.scripts]
 test = 'scripts:test'
