--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-fastapi = {extras = ["all"], version = "^0.61.1"}
+fastapi = "^0.61"
 joblib = "^0.17.0"
 scikit-learn = "^0.23.2"
 scipy = "^1.5.4"
+uvicorn = "^0.12.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
