--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ joblib = "^0.17.0"
 scikit-learn = "^0.23.2"
 scipy = "^1.5.4"
 uvicorn = "^0.12.2"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
