--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ fastapi = "^0.61"
 joblib = "^0.17.0"
 scikit-learn = "^0.23.2"
 scipy = "^1.5.4"
-uvicorn = "^0.12.2"
+uvicorn = {extras = ["standard"], version = "^0.12.0"}
 gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
