--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ scikit-learn = "^0.23.2"
 scipy = "^1.5.4"
 uvicorn = {extras = ["standard"], version = "^0.12.0"}
 gunicorn = "^20.0.4"
+certifi = "^2020.11.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
