Using Poetry for package and dependency management, updating Dockerfile

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -5,6 +5,7 @@ FROM vasdvp/health-apis-centos:8
 ADD shared/install-git-centos8 /install-git
 ADD shared/install-docker-centos8 /install-docker
 ADD shared/install-awscli /install-awscli
+ADD shared/combine-ca-certs /combine-ca-certs
 ADD shared/retry /usr/local/bin/retry
 
 #
@@ -18,3 +19,8 @@ RUN /install-docker
 RUN curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.rpm.sh | bash \
     && retry yum install -y -q git-lfs \
     && git lfs install
+
+# Install certs
+ENV SSL_CERT_FILE=$ADDITIONAL_CA_CERTS/cacert.pem
+COPY shared/combine-ca-certs /combine-ca-serts
+RUN /combine-ca-certs $SSL_CERT_FILE
