--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ scipy = "^1.5.4"
 uvicorn = {extras = ["standard"], version = "^0.12.0"}
 gunicorn = "^20.0.4"
 certifi = "^2020.11.8"
+requests = "^2.25.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -21,6 +22,7 @@ mypy = "^0.790"
 black = "^20.8b1"
 autopep8 = "^1.5.4"
 certifi = "^2020.11.8"
+coverage = "^5.3"
 
 [tool.poetry.scripts]
 test = 'scripts:test'
