--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ black = "^20.8b1"
 autopep8 = "^1.5.4"
 certifi = "^2020.11.8"
 coverage = "^5.3"
+isort = "^5.6.4"
 
 [tool.poetry.scripts]
 test = 'scripts:test'
