--- a/special_issues_service/pyproject.toml
+++ b/special_issues_service/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 fastapi = "^0.62.0"
+pydantic = "^1.7.3"
+typing = "^3.7.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
