--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,9 @@ name = "claims-attributes"
 version = "1.0.0"
 description = ""
 authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]
+packages = [
+    { include = "caapi_shared"},
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
