--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,5 @@
     "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.formatting.provider": "black",
-    "python.pythonPath": "/Users/nhillard/.pyenv/versions/3.8.6/bin/python3.8"
+    "python.pythonPath": "/Users/nhillard/Library/Caches/pypoetry/virtualenvs/claims-attributes-R7YjbBXI-py3.8/bin/python"
 }
