--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ uvicorn = {extras = ["standard"], version = "^0.12.0"}
 gunicorn = "^20.0.4"
 certifi = "^2020.11.8"
 requests = "^2.25.0"
+python-dotenv = "^0.15.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -27,6 +28,7 @@ autopep8 = "^1.5.4"
 certifi = "^2020.11.8"
 coverage = "^5.3"
 isort = "^5.6.4"
+rope = "^0.18.0"
 
 [tool.poetry.scripts]
 test = 'scripts:test'
