--- a/flashes_service/Dockerfile
+++ b/flashes_service/Dockerfile
@@ -1,2 +1,2 @@
 FROM vasdvp/health-apis-python-application-base:poetry-1.1-python-3.8
-ENV MODULE_NAME="flashes_service"
+ENV MODULE_NAME="flashes_service.main"
