--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -9,8 +9,8 @@ python = "^3.8"
 fastapi = "^0.62.0"
 pydantic = "^1.7.3"
 requests = "^2.25.0"
-caapi-shared = {path = "../shared"}
-
+uvicorn = {extras = ["standard"], version = "^0.13.1"}
+importlib-resources = "^3.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
