--- a/vectorizer_service/pyproject.toml
+++ b/vectorizer_service/pyproject.toml
@@ -10,6 +10,8 @@ scipy = "^1.5.4"
 pydantic = "^1.7.3"
 fastapi = "^0.62.0"
 joblib = "^0.17.0"
+importlib-resources = "^3.3.0"
+scikit-learn = "^0.23.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
