--- a/vectorizer_service/pyproject.toml
+++ b/vectorizer_service/pyproject.toml
@@ -12,9 +12,12 @@ fastapi = "^0.62.0"
 joblib = "^0.17.0"
 importlib-resources = "^3.3.0"
 scikit-learn = "^0.23.2"
+uvicorn = {extras = ["standard"], version = "^0.13.1"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
+ipython = "^7.19.0"
+black = "^20.8b1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
