--- a/classifier_service/pyproject.toml
+++ b/classifier_service/pyproject.toml
@@ -12,6 +12,8 @@ fastapi = "^0.62.0"
 uvicorn = {extras = ["standard"], version = "^0.13.1"}
 requests = "^2.25.0"
 importlib-resources = "^3.3.0"
+scipy = "^1.5.4"
+pydantic = "^1.7.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
