--- a/special_issues_service/pyproject.toml
+++ b/special_issues_service/pyproject.toml
@@ -1,16 +1,21 @@
 [tool.poetry]
 name = "special_issues_service"
 version = "1.0.0"
-description = "Special Issues Service, pat of the Claims Attributes API"
+description = "Special Issues Service, part of the Claims Attributes API"
 authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
 fastapi = "^0.62.0"
 pydantic = "^1.7.3"
+uvicorn = {extras = ["standard"], version = "^0.13.1"}
+importlib-resources = "^3.3.0"
+
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
+black = {version = "^20.8b1", allow-prereleases = true}
+pylint = "^2.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
