--- a/flashes_service/pyproject.toml
+++ b/flashes_service/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]
 python = "^3.8"
 fastapi = "^0.62.0"
 pydantic = "^1.7.3"
+uvicorn = {extras = ["standard"], version = "^0.13.1"}
+importlib-resources = "^3.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
