--- a/flashes_service/Dockerfile
+++ b/flashes_service/Dockerfile
@@ -1,2 +1,13 @@
-FROM vasdvp/health-apis-python-application-base:poetry-1.1-python-3.8
-ENV MODULE_NAME="flashes_service.main"
+FROM tiangolo/uvicorn-gunicorn-fastapi:python3.8
+# Install Poetry
+RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | POETRY_HOME=/opt/poetry python && \
+    cd /usr/local/bin && \
+    ln -s /opt/poetry/bin/poetry && \
+    poetry config virtualenvs.create false
+
+# Copy using poetry.lock* in case it doesn't exist yet
+COPY ./pyproject.toml ./poetry.lock* /app/
+
+RUN poetry install --no-root --no-dev
+
+COPY ./app /app/app
