adding tests to api

--- a/src/api_service/pyproject.toml
+++ b/src/api_service/pyproject.toml
@@ -1,8 +1,11 @@
 [tool.poetry]
-name = "api"
+name = "api_service"
 version = "1.0.0"
 description = "API for the Claims Attributes API"
 authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]
+packages = [
+    {include = "app"}
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
