--- a/src/api_service/pyproject.toml
+++ b/src/api_service/pyproject.toml
@@ -21,6 +21,7 @@ flake8 = "^3.8.4"
 black = "^20.8b1"
 certifi = "^2020.12.5"
 coverage = "^5.3"
+pylint = "^2.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
