--- a/src/api_service/pyproject.toml
+++ b/src/api_service/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = "^1.7.3"
 requests = "^2.25.0"
 uvicorn = {extras = ["standard"], version = "^0.13.1"}
 importlib-resources = "^3.3.0"
+caapi_shared = {path="../shared"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
