code modifications to use shared caapi source

--- a/src/flashes_service/pyproject.toml
+++ b/src/flashes_service/pyproject.toml
@@ -3,6 +3,9 @@ name = "flashes_service"
 version = "1.0.0"
 description = "Flashes Service, part of the Claims Attributes API"
 authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]
+packages = [
+    {include = "app"}
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -10,9 +13,11 @@ fastapi = "^0.62.0"
 pydantic = "^1.7.3"
 uvicorn = {extras = ["standard"], version = "^0.13.1"}
 importlib-resources = "^3.3.0"
+caapi_shared = {path="../shared"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
+black = {version = "^20.8b1", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
