--- a/src/classifier_service/pyproject.toml
+++ b/src/classifier_service/pyproject.toml
@@ -3,6 +3,9 @@ name = "classifier_service"
 version = "1.0.0"
 description = "Classifier Service for Claims Attributes API"
 authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]
+packages = [
+    {include = "app"}
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -13,10 +16,12 @@ uvicorn = {extras = ["standard"], version = "^0.13.1"}
 importlib-resources = "^3.3.0"
 scipy = "^1.5.4"
 pydantic = "^1.7.3"
+caapi_shared = {path="../shared"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
 black = "^20.8b1"
+pylint = "^2.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
