setting up virtualenvs in project to enable editor features

--- a/src/api_service/.vscode/settings.json
+++ b/src/api_service/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-    "python.pythonPath": "/Users/nhillard/Library/Caches/pypoetry/virtualenvs/api-service-IkWAQqf5-py3.8/bin/python3.8",
-    "python.linting.pylintPath": "venv/bin/pylint",
-    "python.formatting.provider": "black"
+    "python.pythonPath": "${workspaceFolder}/.venv/bin/python",
+    "python.linting.pylintPath": "${workspaceFolder}/.venv/bin/pylint",
+    "python.formatting.provider": "black",
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
