--- a/src/api_service/pyproject.toml
+++ b/src/api_service/pyproject.toml
@@ -14,7 +14,8 @@ pydantic = "^1.7.3"
 requests = "^2.25.0"
 uvicorn = {extras = ["standard"], version = "^0.13.1"}
 importlib-resources = "^3.3.0"
-caapi_shared = {path="../shared"}
+caapi_shared = "^1.0.0"
+
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
@@ -23,6 +24,9 @@ black = "^20.8b1"
 certifi = "^2020.12.5"
 coverage = "^5.3"
 pylint = "^2.6.0"
+# Commented out - uncomment for local development of shared library
+# See https://github.com/python-poetry/poetry/issues/668
+# caapi_shared = {path="../shared", develop=true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
