--- a/src/classifier_service/pyproject.toml
+++ b/src/classifier_service/pyproject.toml
@@ -16,12 +16,15 @@ uvicorn = {extras = ["standard"], version = "^0.13.1"}
 importlib-resources = "^3.3.0"
 scipy = "^1.5.4"
 pydantic = "^1.7.3"
-caapi_shared = {path="../shared"}
+caapi_shared = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
 black = "^20.8b1"
 pylint = "^2.6.0"
+# Commented out - uncomment for local development of shared library
+# See https://github.com/python-poetry/poetry/issues/668
+# caapi_shared = {path="../shared", develop=true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
