--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,19 @@
 version: "3"
 
 services:
+  api:
+    container_name: claimsAttributesAPIContainer
+    restart: always
+    build: ../src/api_service
+    env_file:
+      - api_variables.env
+    ports:
+      - "8000:8000"
+    command: gunicorn -k "uvicorn.workers.UvicornWorker" -b :8000 app.main:app
+    depends_on:
+      - classifier
+      - flashes
+      - specialissues
 
   classifier:
     container_name: classifierContainer
