--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     build: ../src/api_service
     env_file:
-      - api_variables.env
+      - ../src/api_service/app/docker.env
     ports:
       - "8000:8000"
     command: gunicorn -k "uvicorn.workers.UvicornWorker" -b :8000 app.main:app
