Erroring out now: ValueError
  /opt/pysetup/app does not contain any element

  at /opt/poetry/lib/poetry/_vendor/py3.8/poetry/core/masonry/utils/package_include.py:53 in check_elements

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,16 @@
-FROM va-python-application-base:production
-# Copy using poetry.lock* in case it doesn't exist yet
-COPY ./pyproject.toml ./poetry.lock* /app/
+FROM va-python-application-base:production as base-image 
 
-RUN poetry install --no-root --no-dev
+FROM base-image  as builder-base
+# Cache project requirements, install runtime dependencies
+WORKDIR $PYSETUP_PATH
+COPY poetry.lock pyproject.toml ./
 
-COPY ./app /app/app
+# install runtime deps - uses $POETRY_VIRTUALENVS_IN_PROJECT internally
+RUN poetry install --no-dev
+
+
+FROM base-image as production
+# Copying our virtualenv
+COPY --from=builder-base $VENV_PATH $VENV_PATH
+
+COPY app /app/app
