updating dockerfile to inherit appropriate layers

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,5 @@
-FROM va-python-application-base:production as base-image 
+FROM va-python-application-base:builder as builder-base
 
-FROM base-image  as builder-base
 # Cache project requirements, install runtime dependencies
 WORKDIR $PYSETUP_PATH
 COPY poetry.lock pyproject.toml ./
@@ -8,9 +7,7 @@ COPY poetry.lock pyproject.toml ./
 # install runtime deps - uses $POETRY_VIRTUALENVS_IN_PROJECT internally
 RUN poetry install --no-dev
 
-
-FROM base-image as production
+FROM va-python-application-base:production as production
 # Copying our virtualenv
 COPY --from=builder-base $VENV_PATH $VENV_PATH
-
 COPY app /app/app
