--- a/src/api_service/pyproject.toml
+++ b/src/api_service/pyproject.toml
@@ -25,6 +25,7 @@ pylint = "^2.6.0"
 # See https://github.com/python-poetry/poetry/issues/668
 # caapi_shared = {path="../shared", develop=true}
 
+docker = "^4.4.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
