--- a/src/api_service/pyproject.toml
+++ b/src/api_service/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "api_service"
+name = "app"
 version = "1.0.0"
 description = "API for the Claims Attributes API"
 authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]
@@ -25,7 +25,10 @@ pylint = "^2.6.0"
 # See https://github.com/python-poetry/poetry/issues/668
 # caapi_shared = {path="../shared", develop=true}
 
-docker = "^4.4.0"
+[tool.poetry.scripts]
+test = 'scripts:test'
+server = 'scripts:server'
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
