--- a/src/special_issues_service/pyproject.toml
+++ b/src/special_issues_service/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "special_issues_service"
+name = "app"
 version = "1.0.0"
 description = "Special Issues Service, part of the Claims Attributes API"
 authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]
@@ -19,6 +19,10 @@ pylint = "^2.6.0"
 # Commented out - uncomment for local development of shared library
 # See https://github.com/python-poetry/poetry/issues/668
 # caapi_shared = {path="../shared", develop=true}
+
+[tool.poetry.scripts]
+test = 'scripts:test'
+server = 'scripts:server'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
