--- a/src/testing_service/pyproject.toml
+++ b/src/testing_service/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "test"
+name = "app"
 version = "1.0.0"
 description = "Test module for CAAPI microservices"
 authors = ["Nat Hillard <nathaniel.hillard@va.gov>"]
@@ -15,6 +15,10 @@ docker = "^4.4.0"
 pytest = "^6.2.1"
 pylint = "^2.6.0"
 black = "^20.8b1"
+
+[tool.poetry.scripts]
+test = 'scripts:test'
+server = 'scripts:server'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
