--- a/src/api_service/.vscode/settings.json
+++ b/src/api_service/.vscode/settings.json
@@ -3,5 +3,6 @@
     "python.linting.pylintPath": "${workspaceFolder}/.venv/bin/pylint",
     "python.formatting.provider": "black",
     "python.linting.pylintEnabled": true,
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "python.testing.pytestEnabled" : true
 }
