--- a/src/testing_service/pyproject.toml
+++ b/src/testing_service/pyproject.toml
@@ -15,6 +15,7 @@ docker = "^4.4.0"
 pytest = "^6.2.1"
 pylint = "^2.6.0"
 black = "^20.8b1"
+pytest-cov = "^2.10.1"
 
 [tool.poetry.scripts]
 test = 'scripts:test'
