--- a/src/special_issues_service/pyproject.toml
+++ b/src/special_issues_service/pyproject.toml
@@ -20,6 +20,7 @@ pylint = "^2.6.0"
 # See https://github.com/python-poetry/poetry/issues/668
 # caapi_shared = {path="../shared", develop=true}
 
+pytest-cov = "^2.10.1"
 [tool.poetry.scripts]
 test = 'scripts:test'
 server = 'scripts:server'
