--- a/src/flashes_service/pyproject.toml
+++ b/src/flashes_service/pyproject.toml
@@ -19,6 +19,7 @@ black = {version = "^20.8b1", allow-prereleases = true}
 # See https://github.com/python-poetry/poetry/issues/668
 # caapi_shared = {path="../shared", develop=true}
 
+pytest-cov = "^2.10.1"
 [tool.poetry.scripts]
 test = 'scripts:test'
 server = 'scripts:server'
