--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,10 @@ services:
     build:
       context: ./src/special_issues_service
       dockerfile: $PWD/docker/Dockerfile
+    
+  proxy:
+    image: nginx:latest
+    volumes: 
+      - $PWD/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - api
