--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -12,6 +12,8 @@ services:
       - src/api_service/app/docker.env
     ports:
       - "8000:8000"
+    environment:
+      - PORT=8000
 
   classifier:
     image: classifier:test
@@ -19,6 +21,8 @@ services:
       target: test
     ports:
       - "8001:8001"
+    environment:
+      - PORT=8001
 
   flashes:
     image: flashes:test
@@ -26,6 +30,8 @@ services:
       target: test
     ports:
       - "8002:8002"
+    environment:
+      - PORT=8002
 
   specialissues:
     image: specialissues:test
@@ -33,6 +39,8 @@ services:
       target: test
     ports:
       - "8003:8003"
+    environment:
+      - PORT=8003
 
   testing:
     image: testing:test
@@ -42,6 +50,8 @@ services:
       target: test
     ports:
       - "8004:8004"
+    environment:
+      - PORT=8004
     depends_on:
       - api
       - classifier
