--- a/src/api_service/app/docker.env
+++ b/src/api_service/app/docker.env
@@ -1,3 +1,3 @@
-export CLASSIFIER_URI=http://classifier:8001
-export FLASHES_URI=http://flashes:8002
-export SPECIAL_ISSUES_URI=http://specialissues:8003
+export CLASSIFIER_URI=http://classifier
+export FLASHES_URI=http://flashes
+export SPECIAL_ISSUES_URI=http://specialissues
