--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,9 +9,11 @@ services:
     build:
       target: development
     env_file:
-      - src/api_service/app/docker.env
+      - src/api_service/app/docker.dev.env
     ports:
       - "8000:8000"
+    environment:
+      - PORT=8000
 
   classifier:
     image: classifier:dev
@@ -19,6 +21,8 @@ services:
       target: development
     ports:
       - "8001:8001"
+    environment:
+      - PORT=8001
 
   flashes:
     image: flashes:dev
@@ -26,6 +30,8 @@ services:
       target: development
     ports:
       - "8002:8002"
+    environment:
+      - PORT=8002
   
   specialissues:
     image: specialissues:dev
@@ -33,3 +39,5 @@ services:
       target: development
     ports:
       - "8003:8003"
+    environment:
+      - PORT=8003
