--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,29 +8,14 @@ services:
     image: 533575416491.dkr.ecr.us-gov-west-1.amazonaws.com/benefits-apis-claims-attributes:${VERSION}
     ports:
       - "80:80"
-    environment:
-      - BOUND_PORT=80
+    env_file:
+      - src/api_service/app/docker.env
 
   classifier:
     image: 533575416491.dkr.ecr.us-gov-west-1.amazonaws.com/benefits-apis-claims-attributes-classifier-service:${VERSION}
-    ports:
-      - "8001:8001"
-    environment:
-      - BOUND_PORT=8001
 
   flashes:
     image: 533575416491.dkr.ecr.us-gov-west-1.amazonaws.com/benefits-apis-claims-attributes-flashes-service:${VERSION}
-    ports:
-      - "8002:8002"
-    environment:
-      - BOUND_PORT=8002
-  
+   
   specialissues:
     image: 533575416491.dkr.ecr.us-gov-west-1.amazonaws.com/benefits-apis-claims-attributes-special-issues-service:${VERSION}
-    ports:
-      - "8003:8003"
-    environment:
-      - BOUND_PORT=8003
-
-  test:
-    image: 533575416491.dkr.ecr.us-gov-west-1.amazonaws.com/benefits-apis-claims-attributes-test:${VERSION}
