--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,3 +19,6 @@ services:
    
   specialissues:
     image: 533575416491.dkr.ecr.us-gov-west-1.amazonaws.com/benefits-apis-claims-attributes-special-issues-service:${VERSION}
+
+  testing:
+    image: 533575416491.dkr.ecr.us-gov-west-1.amazonaws.com/benefits-apis-claims-attributes-test:${VERSION}
