--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,10 @@ services:
     build:
       context: ./src/special_issues_service
       dockerfile: $PWD/docker/Dockerfile
+    
+  testing:
+    image: testing:latest
+    build:
+      context: ./src/api_service
+      dockerfile: $PWD/docker/Dockerfile
+      target: test
