--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,3 +24,7 @@ services:
     image: 533575416491.dkr.ecr.us-gov-west-1.amazonaws.com/benefits-apis-claims-attributes-test:${VERSION}
     env_file:
       - src/api_service/tests/prod.env
+    build:
+      context: ./src/api_service
+      dockerfile: $PWD/docker/Dockerfile
+      target: test
