--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -22,3 +22,9 @@ services:
 
   testing:
     image: testing:${VERSION}_staging
+    env_file:
+      - src/api_service/tests/prod.env
+    build:
+      context: ./src/api_service
+      dockerfile: $PWD/docker/Dockerfile
+      target: test
