--- a/src/api_service/pyproject.toml
+++ b/src/api_service/pyproject.toml
@@ -11,7 +11,7 @@ pydantic = "^1.7.3"
 requests = "^2.25.0"
 uvicorn = {extras = ["standard"], version = "^0.13.1"}
 importlib-resources = "^3.3.0"
-caapi_shared = "^1.0.0"
+caapi-shared = "^1.0.4"
 
 
 [tool.poetry.dev-dependencies]
@@ -21,16 +21,11 @@ black = "^20.8b1"
 certifi = "^2020.12.5"
 coverage = "^5.3"
 pylint = "^2.6.0"
+pytest-cov = "^2.10.1"
+requests-mock = "^1.8.0"
 # Commented out - uncomment for local development of shared library
 # See https://github.com/python-poetry/poetry/issues/668
 # caapi_shared = {path="../shared", develop=true}
-
-pytest-cov = "^2.10.1"
-requests-mock = "^1.8.0"
-[tool.poetry.scripts]
-test = 'scripts:test'
-server = 'scripts:server'
-
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
