working, but with authbind

--- a/docker/va-python-application-base/Dockerfile
+++ b/docker/va-python-application-base/Dockerfile
@@ -30,10 +30,17 @@ ENV PYTHONUNBUFFERED=1 \
 # prepend poetry and venv to path
 ENV PATH="$POETRY_HOME/bin:$VENV_PATH/bin:$PATH"
 
+# Add non-root user
+RUN useradd --create-home --home-dir /home/docker --shell /bin/bash docker
+
 # We need to install curl on top of the slim image
 RUN apt-get update \
     && apt-get install --no-install-recommends -y \
-    curl 
+    curl \
+    authbind && \
+    touch /etc/authbind/byport/80 && \
+    chmod 500 /etc/authbind/byport/80 && \
+    chown docker /etc/authbind/byport/80
 
 ###############################################
 # Certificates
@@ -135,13 +142,11 @@ RUN chmod +x /docker-entrypoint.sh
 # By default we copy just the fake app. 
 # Your app will need to copy its own files, e.g. COPY api /app/api
 COPY app /app/app
+RUN chown -R docker:docker /app
 
 # Entrypoint will run the below command as part of its run
 WORKDIR /app
 
-# Add non-root user
-RUN useradd --create-home --home-dir /home/docker --shell /bin/bash docker
-RUN chown -R docker:docker /app
 # Switch to non-root user
 USER docker
 
